# pointer

./: .gitignore  Cargo.toml  README.md  flake.nix  input.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
.sqlx/: query-ad55d5ae48a06beb05f041ccb4098d0e427a541980c572a6e048c483fc8b8fd7.json
backend/: Cargo.toml
backend/.sqlx/: query-0227969f2a281571ae3d34f80c06a3071be70beac24ae817c9a1c18c836509dd.json  query-10507b58f6dd3561bd5847fec923afc9f4b4443868ce6b4e1d6e1d5795a26776.json  query-bda7bcb71604b75fd9f7407dd18b2c5dacc199c8c25712bdbdc791dd8f4cf454.json
backend/migrations/: 0001_init.sql  0002_chunks.sql  0002_extract_context_with_highlight.sql  0003_add_branches.sql  0003_full_text_search.sql  0004_add_chunk_ref_count.sql  0004_enable_pg_trgm.sql  0005_branch_policies.sql  0005_optimize_search_indexes.sql  0006_symbol_names.sql  0007_disable_symbol_name_triggers.sql  0008_unique_symbols.sql  0009_drop_symbol_name_tables.sql  0010_unique_symbols_lowercase_only.sql  0011_drop_symbols_name_trgm.sql  0012_move_chunk_ref_counts.sql  0013_extract_context_match_spans.sql  0014_symbol_search_indexes.sql  0015_fix_trailing_newline_line_counts.sql
backend/sql/: rebuild_symbol_name_cache.sql
backend/src/: gc.rs  main.rs
components/: Cargo.toml
components/src/: header.rs  search_bar.rs
indexer/: Cargo.toml
indexer-types/: Cargo.toml
indexer-types/src/: lib.rs
indexer/src/: admin.rs  chunk_store.rs  cli.rs  config.rs  engine.rs  lib.rs  main.rs  models.rs  output.rs  upload.rs  utils.rs
indexer/src/extractors/: c.rs  cpp.rs  glsl.rs  go.rs  java.rs  javascript.rs  lua.rs  mod.rs  nix.rs  objective_c.rs  php.rs  protobuf.rs  python.rs  rust.rs  swift.rs  typescript.rs
nix/: pointer-module.nix  pointer.nix
public/: output.css
reposerver/: Cargo.toml  README.md  example.reposerver.toml
reposerver/src/: config.rs  git.rs  hooks.rs  indexer.rs  logging.rs  main.rs  scheduler.rs  state.rs
src/: app.rs  dsl.rs  lib.rs  main.rs  pages.rs  scope_parser.rs  server.rs
src/components/: breadcrumbs.rs  code_intel_panel.rs  file_content.rs  file_tree.rs  header.rs  mod.rs  path_filter_actions.rs  quick_navigator.rs  repo_list.rs  search_bar.rs
src/db/: mod.rs  models.rs  postgres.rs
src/mcp/: server.rs  tools.rs  types.rs
src/pages/: file_viewer.rs  repo_detail.rs  search.rs
src/services/: mod.rs  repo_service.rs  search_service.rs
src/utils/: time.rs
