[workspace]
members = ["indexer", "backend"]
resolver = "2"

[package]
name = "pointer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0", features = ["nightly", "tracing"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
axum = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["full"], optional = true }
wasm-bindgen = { version = "=0.2.104", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
urlencoding = "2"
leptos_darkmode = "0.4.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-forest = { version = "0.1" }
colored = { version = "2.1", optional = true }
console_log = { version = "1.0", optional = true }
log = "0.4.28"
tracing-web = { version = "0.1.3", optional = true }
web-sys = { version = "=0.3.81", features = [
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Clipboard",
    "CssStyleDeclaration",
    "Document",
    "DomQuad",
    "DomRect",
    "DomRectList",
    "DomRectReadOnly",
    "DomTokenList",
    "Element",
    "File",
    "HtmlCanvasElement",
    "HtmlElement",
    "MediaQueryList",
    "Navigator",
    "NodeList",
    "Performance",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Selection",
    "Storage",
    "Url",
    "Window",
] }
clap = { version = "4.5.48", optional = true }
dotenvy = { version = "0.15.7", optional = true }
sqlx = { version = "0.8", optional = true }
async-trait = { version = "0.1" }
base64 = { version = "0.22", optional = true }
zstd = { version = "0.13", optional = true }
pointer-indexer = { path = "./indexer", optional = true }
anyhow = "1.0.100"
server_fn_macro_default = { version = "0.8.5", optional = true }
pulldown-cmark = { version = "0.11.0", optional = true, default-features = false }
lazy_static = { version = "1.5.0", optional = true }
autumnus = { git = "https://github.com/DolceTriade/autumnus.git", branch = "nix", optional = true, features = ["all-languages"] }
thiserror = { version = "1.0.63", optional = true }


[features]
hydrate = [
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:tracing-web",
    "pulldown-cmark/html",
    "dep:wasm-bindgen",
    "leptos/hydrate",
]
pointer-indexer = ["dep:pointer-indexer"]
ssr = [
    "dep:axum",
    "dep:colored",
    "dep:console_log",
    "dep:leptos_axum",
    "dep:reqwest",
    "dep:tokio",
    "dep:base64",
    "dep:zstd",
    "dep:pointer-indexer",
    "dep:lazy_static",
    "pulldown-cmark/html",
    "autumnus",
    "server_fn_macro_default/axum",
    "clap/derive",
    "clap/wrap_help",
    "clap/env",
    "dotenvy/cli",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/ssr",
    "sqlx/macros",
    "sqlx/postgres",
    "sqlx/runtime-tokio",
    "dep:thiserror",
]
tracing-web = ["dep:tracing-web"]
dotenvy = ["dep:dotenvy"]
sqlx = ["dep:sqlx"]
base64 = ["dep:base64"]
zstd = ["dep:zstd"]
lazy_static = ["dep:lazy_static"]
pulldown-cmark = ["dep:pulldown-cmark"]
thiserror = ["dep:thiserror"]

server_fn_macro_default = ["dep:server_fn_macro_default"]
autumnus = ["dep:autumnus"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "pointer"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "public/output.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use when compiling the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
