[package]
name = "pointer-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
pointer-indexer = { path = "../indexer" }
zstd = "0.13"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
dotenvy = "0.15"
tower-http = { version = "0.4", features = ["trace"] }
base64 = "0.21"
once_cell = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
futures = "0.3"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
