[package]
name = "pointer-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
git2 = "0.18"
hex = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-nix = "0.3"
tree-sitter-proto = "0.3"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-objc = "3.0"
tree-sitter-swift = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls" ] }
zstd = "0.13"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
fastcdc = "3"
blake3 = "1"
tempfile = "3"
rayon = "1.10"
tree-sitter-lua = "0.2.0"
tree-sitter-php = "0.24.2"
tree-sitter-glsl = "0.2.0"

[dev-dependencies]
pretty_assertions = "1"
